crates/wac-parser/tests/resolution/fail/mismatched-record-field-name.wac
package test:comp;

import x: interface {
    record r {
        a: u8,
        c: u16,
        b: u32,
    }
};

let i = new foo:bar { x };
